--- a/README.Rmd
+++ b/README.Rmd
@@ -8,11 +8,7 @@ output:
 ---
 
 ## Abstract
-A two line summary
-
-
-## Introduction
-quantified self, etc.
+We use the random forest method to estimate features for the Human Activity Recognition data set from Groupware. We that this method produces relevant results.
 
 
 ## Data
@@ -33,16 +29,16 @@ download.file(test.url,     test.file)
 ```
 In order to ensure all transformations are applied to both the trainig and test data sets equally, we employ the OOP method and create functions for every step. First we create a function to read data and set NAs and apply this to both datasets.
 ```{r read}
-read.pml <- function(x) { read.csv(x, na.strings = c("", "NA", "#DIV/0!") ) }
-training <- read.pml(training.file)
-test     <- read.pml(test.file)
+read.pml       <- function(x) { read.csv(x, na.strings = c("", "NA", "#DIV/0!") ) }
+training       <- read.pml(training.file)
+test           <- read.pml(test.file)
 ```
 
 ```{r split, message=FALSE}
 library(caret)
-trainIndex     <- createDataPartition(training$classe, p=.50, list=FALSE)
-training.train <- training[trainIndex,]
-training.test  <- training[-trainIndex,]
+trainingIndex  <- createDataPartition(training$classe, p=.50, list=FALSE)
+training.train <- training[ trainingIndex,]
+training.test  <- training[-trainingIndex,]
 ```
 
 Next we create a function to remove entire NA columns, and apply it to both data frames. Lastly we create a function that removes any variables with missing NAs and apply this to the training set.
@@ -85,4 +81,8 @@ confusionMatrix(predict(random.forest,
                         newdata=training.test),
                 training.test$classe
                 )
+```
+
+```{r plot}
+plot( varImp(random.forest) )
 ```
