--- a/README.Rmd
+++ b/README.Rmd
@@ -20,12 +20,11 @@ training.file <- 'pml-training.csv'
 test.file     <- 'pml-test.csv'
 training.url  <- 'https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv'
 test.url      <- 'https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv'
-
 ```
 We then execute the downloads.
 ```{r download, eval=FALSE}
-download.file(training.url, training.file)
-download.file(test.url,     test.file)
+download.file(training.url, training.file, method='wget')
+download.file(test.url,     test.file,     method='wget')
 ```
 In order to ensure all transformations are applied to both the trainig and test data sets equally, we employ the OOP method and create functions for every step. First we create a function to read data and set NAs and apply this to both datasets.
 ```{r read}
