--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,7 +7,7 @@
 	number = {1},
 	pages = {5-32},
 	year = {2001},
-	doi = {http://dx.doi.org/10.1023%2FA%3A1010933404324},
+	doi = {10.1023%2FA%3A1010933404324},
 }
 
 @Article{breiman1996bagging,
@@ -19,6 +19,6 @@
 	number = {2},
 	pages = {123-140},
 	year = {1996},
-	doi = {http://dx.doi.org/10.1007%2FBF00058655},
+	doi = {10.1007%2FBF00058655},
 }
 
